re-size text witihn contact me setcion, fix overflow at 375px

--- a/style.css
+++ b/style.css
@@ -19,7 +19,6 @@ body {
 .about-me-wrap,
 .contact-me-container {
   width: auto;
-  min-width: 375px;
   background-color: rgba(0, 0, 0, 0);
 }
 
@@ -364,28 +363,32 @@ contact me section
   margin-bottom: 0;
   padding-left: 6%;
   padding-right: 6%;
-  padding-top: 150px;
+  padding-top: 25%;
   border-radius: 100px 0 0 0;
+  box-sizing: border-box;
 }
 
 .contact-me-container p,
 .contact-me-container h2 {
   color: whitesmoke;
-  width: 88%;
   text-align: center;
   padding-left: auto;
   align-self: center;
-  font-size: 1.5rem;
+  font-size: 1.25rem;
 }
 
 .contact-me-container h2 {
-  font-size: 3.25rem;
-  margin-bottom: 1%;
+  font-size: 2.9rem;
+  margin-bottom: 0;
+  margin-top: 0;
 }
 
 .contac-form {
-  margin-right: 3%;
-  width: 85%;
+  margin-right: 0;
+}
+
+.contac-form ul {
+  padding-left: 0;
 }
 
 .contac-form input,
@@ -396,17 +399,18 @@ contact me section
   padding: 2%;
   border: 0;
   color: #6070ff;
-  min-width: 327px;
   width: 100%;
   align-self: center;
+  box-sizing: border-box;
 }
 
 #user-message {
-  min-width: 327px;
   width: 100%;
   border-radius: 5px;
   border: 0;
   padding: 2%;
+  margin-top: 3%;
+  box-sizing: border-box;
 }
 
 #get-in-touch {
